Added Disquis page url

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: long.hw@gmail.com
   facebook:
   flickr:
-  github: https://github.com/abstractspace
+  github: abstractspace
   instagram:
   linkedin:
   pinterest:
