--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Hunter Long
 description: Electrical Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: {{ site.baseurl }}/images/cantor_dust.jpg
+avatar: {{ site.url }}/images/cantor_dust.jpg
 
 #
 # Flags below are optional
