--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Hunter Long
 description: Electrical Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-# avatar: {{ site.github.url}}/images/cantor_dust.jpg
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: {{ site.github.url }}/images/cantor_dust.jpg
 
 #
 # Flags below are optional
